--- a/kodilla-html-css/styles.css
+++ b/kodilla-html-css/styles.css
@@ -1,3 +1,4 @@
+/*
 body {
     background-color: grey;
     font-family: Georgia, Arial;
@@ -16,4 +17,4 @@ h2 {
 
 p {
     text-align: center;
-}
+}*/
